# vcap

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  TODO.md  doxygen.conf  doxygen.dox  vcap.c  vcap.h
cmake/: FindJansson.cmake  FindV4L2.cmake
examples/: CMakeLists.txt  grab.c  info.c  png.c  sdl.c
examples/capture/: CMakeLists.txt  capture.c
examples/grab/: CMakeLists.txt  grab.c
examples/info/: CMakeLists.txt  info.c
examples/jpeg/: CMakeLists.txt  jpeg.c
examples/json/: CMakeLists.txt  json.c
examples/png/: CMakeLists.txt  png.c
examples/sdl/: CMakeLists.txt  sdl.c
examples/settings/: CMakeLists.txt  settings.c
extensions/: vcap_settings.h
include/vcap/: controls.h  ctrls.h  decode.h  fmts.h  formats.h  vcap.h  vcap_controls.h  vcap_decode.h  vcap_formats.h
src/: ctrls.c  decode.c  fmts.c  formats.c  priv.c  priv.h  vcap.c  vcap_decode.c  vcap_formats.c
src/ext/: jpeg.c  json.c  png.c
